Fix team image styling, so that the image is zoomed in when the layout changes to be side by side. Use transform and overflow:hidden within the flexbox model, and add breakpoints to flow with content.

--- a/css/main.css
+++ b/css/main.css
@@ -591,6 +591,35 @@ iframe {
 
 }
 
+@media only screen and (min-width: 900px) {
+    /* Who We Are section */
+    #who .container {
+        max-width: 100vw;
+        flex-direction: row;
+    }
+    #who .who-img,
+    #who .who-content{
+        flex: 1;
+    }
+    .who-content {
+        max-width: 38%;
+    }
+    #who .who-img {
+        overflow: hidden;
+        display: flex;
+        align-items: center;
+    }
+    #who .who-img img {
+        transform: scale(1.35);
+        height: auto;
+        width: 100%;
+    }
+    ul.list li {
+        text-align: left;
+    }
+
+}
+
 @media only screen and (min-width: 1100px) {
     /* Style adjustments for viewports that meet the condition */
     .container {
@@ -609,30 +638,9 @@ iframe {
     }
 
     /* Who We Are section */
-    #who .container {
-        max-width: 100vw;
-        flex-direction: row;
-    }
-    #who .who-img {
-        display: flex;
-        align-items: center;
-        width: 60%;
-    }
     #who .who-img img {
-        height: auto;
-        width: 100%;
+        transform: scale(1.30);
     }
-    .who-content {
-        max-width: 38%;
-    }
-    .who-img img {
-        width: 100%;
-        height: auto;
-    }
-    ul.list li {
-        text-align: left;
-    }
-    
     /* Our Clients section */
     #clients .items div {
         max-width: 12%;
